Women Safety Feature in Social Media App

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.whatsappchat">
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -10,8 +16,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WhatsAppChat">
         <activity
+            android:name=".SafetyRegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SafetyActivity"
+            android:exported="false" />
+        <activity
             android:name=".VerifyOTPActivity"
-
             android:exported="false" />
         <activity
             android:name=".SendOTPActivity"
