--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,51 @@
+
 buildscript {
+    repositories {
+
+       // jcenter()
+        mavenCentral()
+        maven{
+            url 'https://maven.google.com'
+            name 'Google'
+        }
+
+    }
+
     dependencies {
+        classpath 'com.android.tools.build:gradle:7.1.3'
         classpath 'com.google.gms:google-services:4.3.10'
+
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
 }
 
+
+allprojects {
+    repositories {
+        google()
+       jcenter() {
+            content {
+                includeModule("com.yqritc", "android-scalablevideoview")
+            }
+        }
+        mavenCentral()
+        maven {
+            url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
+            'https://maven.google.com'
+            'https://www.jitpack.io'
+
+        }
+
+    }
+
+        }
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
