--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     repositories {
 
        // jcenter()
-        mavenCentral()
+      //  mavenCentral()
         maven{
             url 'https://maven.google.com'
             name 'Google'
@@ -14,6 +14,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.3'
         classpath 'com.google.gms:google-services:4.3.10'
+
 
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
@@ -27,12 +28,8 @@ plugins {
 allprojects {
     repositories {
         google()
-       jcenter() {
-            content {
-                includeModule("com.yqritc", "android-scalablevideoview")
-            }
-        }
-        mavenCentral()
+        jcenter { url "http://jcenter.bintray.com/"}
+
         maven {
             url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
             'https://maven.google.com'
@@ -40,10 +37,7 @@ allprojects {
 
         }
 
-    }
-
-        }
-
+    }}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
